--- a/index.html
+++ b/index.html
@@ -159,19 +159,19 @@
       <div class="grid">
         <a class="card glass" href="https://youtube.com/@LOCYZZ/?sub_confirmation=1" target="_blank">
           <img src="youtube.png" alt="YouTube" class="card-logo" />
-          <div class="card-body"><h3>YouTube</h3><p class="muted">Abonne-toi 🎥</p></div>
+          <div class="card-body"><h3>YouTube</h3></div>
         </a>
         <a class="card glass" href="https://discord.com/invite/ZnHgH266er" target="_blank">
           <img src="discord.png" alt="Discord" class="card-logo" />
-          <div class="card-body"><h3>Discord</h3><p class="muted">Rejoins la commu 💬</p></div>
+          <div class="card-body"><h3>Discord</h3></div>
         </a>
         <a class="card glass" href="https://www.tiktok.com/@locyzz.yt" target="_blank">
           <img src="tiktok.png" alt="TikTok" class="card-logo" />
-          <div class="card-body"><h3>TikTok</h3><p class="muted">Clips & highlights ⚡</p></div>
+          <div class="card-body"><h3>TikTok</h3></div>
         </a>
         <a class="card glass" href="https://www.instagram.com/locyzz_life" target="_blank">
           <img src="instagram.png" alt="Instagram" class="card-logo" />
-          <div class="card-body"><h3>Instagram</h3><p class="muted">Shots & stories 📸</p></div>
+          <div class="card-body"><h3>Instagram</h3></div>
         </a>
       </div>
     </section>
