--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="hero-card glass">
         <span class="tag">Student · 2025</span>
         <h1 class="hero-title"><span class="shine">Salut, je suis LOCYZZ</span></h1>
-        <h2 class="hero-sub">Étudiants en BUT Informatique</h2>
+        <h2 class="hero-sub">Étudiant en BUT Informatique</h2>
         <p class="hero-text">
           Je conçois des projets mêlant graphisme, web et montage vidéo, avec un style moderne et fluide qui reflète ma créativité.
         </p>
