--- a/Logbook.html
+++ b/Logbook.html
@@ -263,10 +263,12 @@ gap: 20px;
   ADAPTATION MOBILE
   ========================== */
 @media (max-width: 480px) {
-.library-grid {
-  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-  gap: 15px;
+  .library-grid {
+    grid-template-columns: 1fr; /* 1 carte par ligne */
+    gap: 20px;
+  }
 }
+
 
 .library-card {
   padding-top: 10px;
