--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!-- Bloc droit -->
       <div class="hero-side">
   <div class="profile-card glass fade-scroll">
-    <img class="avatar" src="logonoel.png" alt="Photo de LOCYZZ" />
+    <img class="avatar" src="logo.png" alt="Photo de LOCYZZ" />
     <h3 class="profile-name">LOCYZZ</h3>
     <p class="muted">Français</p>
     <div class="skills">
@@ -201,3 +201,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
